--- a/website-template/css/style.css
+++ b/website-template/css/style.css
@@ -1094,7 +1094,7 @@ a:focus {
 .team {
     position: relative;
     width: 100%;
-    padding: 45px 0 15px 0;
+   padding: 45px 0 15px 0;
 }
 
 .team .team-item {
@@ -1102,8 +1102,9 @@ a:focus {
     background: #ffffff;
     margin-bottom: 30px;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-around;
     box-shadow: inset 0 0 0 0 transparent;
     transition: ease-out 0.5s;
 }
@@ -1123,7 +1124,8 @@ a:focus {
 .team .team-text {
     position: relative;
     width: 50%;
-    padding: 0 30px;
+    text-align: inherit;
+    padding: 30px 0px;
 }
 
 .team .team-text h2 {
@@ -1150,7 +1152,7 @@ a:focus {
     position: relative;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content:center;
 }
 
 .team .team-social a.btn {
@@ -1165,9 +1167,12 @@ a:focus {
     margin-right: 5px;
 }
 
+/*
 .team .team-item:hover {
-    box-shadow: inset 800px 0 0 0 rgba(106, 35, 239, 0.95);
+    box-shadow: inset  0 800px 0 rgba(106, 35, 239, 0.95);
 }
+*/
+
 
 .team .team-item:hover .team-img img {
     transform: scale(1.2);
@@ -1176,7 +1181,7 @@ a:focus {
 .team .team-item:hover .team-text h2,
 .team .team-item:hover .team-text h4,
 .team .team-item:hover .team-text p {
-    color: #ffffff;
+    color: #0f0f0f;
 }
 
 .team .team-item:hover .team-social a.btn {
@@ -1589,3 +1594,7 @@ a:focus {
         padding: 0 5px;
     }
 }
+
+
+
+
