--- a/Web/gate-keeper/src/index.css
+++ b/Web/gate-keeper/src/index.css
@@ -12,4 +12,15 @@ body {
     background-position: bottom;
     background-color: #b8bce2;
 }
+
+form{
+    padding: 10px;
+    margin-top: 25px;
+  }
+
+form button , form h5{
+    margin: 20px 0px ;
+}
+  
+  
   
