Added messages component, ActionCreator for message download, modifi to download a message, install firebase  set fbconfig file

--- a/Web/gate-keeper/src/index.css
+++ b/Web/gate-keeper/src/index.css
@@ -23,5 +23,16 @@ form button , form h5{
 }
 
 
+
+.card-image  {
+    background-color: #b8bce2;
+    width: 100%;
+    text-align: center;
+    margin : auto;
+    
+}
+
+
+
   
   
