--- a/Web/gate-keeper/src/index.css
+++ b/Web/gate-keeper/src/index.css
@@ -67,3 +67,14 @@ form button {
 }
 
 
+/* Mainboard */
+
+.mainCard {
+    height:  150%;
+    background-color: blueviolet;
+}
+
+.mainTable {
+    padding-top: 5%  ;
+   
+}
