change UI colorfully

--- a/Web/gate-keeper/src/index.css
+++ b/Web/gate-keeper/src/index.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display&display=swap');
+/* font-family: 'Noto Sans Display', sans-serif; */
 html{
     min-height: 100%;
 
@@ -8,12 +11,12 @@ body {
     
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: 'Noto Sans Display', sans-serif;
     
     background-size: 100%;
     background-position: bottom;
     
-    background-image: linear-gradient(to bottom, rgb(154, 154, 155) , rgb(173, 173, 173)); 
+    background-image: linear-gradient(to bottom, rgb(208, 208, 211) , rgb(230, 228, 228)); 
     
 }
 
@@ -47,6 +50,11 @@ form button , form h5{
     padding-left: 300px;
     /* margin-left: 300px; */
 }
+
+.container2{
+    padding-left: 10%;
+    width: 80%;
+}
 @media only screen and (max-width : 992px) {
     .offsetC {
       padding-left: 0;
@@ -54,7 +62,7 @@ form button , form h5{
 }
 
 
-.navIcon >li{
+.navIcon li{
     padding: 0 10px;
 }
 .navContainer{
@@ -62,30 +70,58 @@ form button , form h5{
 }
 
 
+
+
 /* Mainboard */
 
+.mainBoard .topic{
+    margin: 2rem 0rem 0 0;  
+}
+.topic h5{
+    color: rgb(0, 0, 0);
+}
+.topic p{
+    color: rgb(186, 185, 189);
+    font-size: 1.1rem;
+    padding: 0% 0.%;
+    margin: 0;
+}
 .mainCard {
     padding: 2rem;
     margin-top: 3rem;
     font-size:  1.2rem;
     text-align:  center;
+    border-radius: 0.2rem;
 }
 .mainCard i {
     vertical-align: text-bottom;
 }
 .mainCard span {
     margin: 0 5%;
-    
+    font-size: 0.9rem;
+
 }
 
 .mainTable {
-    padding-top: 5%  ;
+    margin-top: 5%  ;
+    border-radius: 0.2rem;
    
 }
 .mainTable h5 {
-    padding: 1rem;
+    padding: 1rem 1rem 1rem 0;
+    
 }
 
+
+.mainChart {
+    margin-top: 5%  ;
+    border-radius: 0.2rem;
+   
+}
+.mainChart h5 {
+    padding: 1rem 1rem 1rem 0;
+    
+}
 
 /* home */
 .home{
@@ -105,3 +141,11 @@ form button , form h5{
 .download{
     margin-top: 3vh;
 }
+
+.font1{
+    font-family: 'Noto Sans Display', sans-serif;
+    font-size: 2rem !important;
+
+}
+
+
