--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -922,6 +922,14 @@ a:focus {
     background: rgba(106, 35, 239, 0.95);
 }
 
+.banner1 {
+    position: relative;
+    width: 100%;
+    margin: 45px 0;
+    padding: 90px 0;
+    background: rgba(255, 255, 255, 0.95);
+}
+
 .banner .container {
     max-width: 750px;
     text-align: center;
@@ -1419,10 +1427,11 @@ a:focus {
 
 .blog .blog-text {
     position: relative;
-    padding: 30px;
+    padding: 10px;
     border-right: 1px solid rgba(0, 0, 0, .07);
     border-bottom: 1px solid rgba(0, 0, 0, .07);
     border-left: 1px solid rgba(0, 0, 0, .07);
+    text-align: center;
 }
 
 .blog .blog-text h2 {
@@ -1596,7 +1605,7 @@ a:focus {
 }
 
 table {
-    font-size: 23px;
+    font-size: 15px;
     color: white;
 }
 
