--- a/Web/gate-keeper/src/index.css
+++ b/Web/gate-keeper/src/index.css
@@ -137,7 +137,7 @@ form button , form h5{
     margin: 3vh;
     height: 85vh;
     border-top: 1vh;
-    background-image: url("https://thumbs.dreamstime.com/b/delivery-man-parcel-box-ringing-door-bell-home-service-mail-people-shipment-concept-customers-98428939.jpg");
+    background-image: url("./img/home.jpg");
     
     background-position: center; 
     background-repeat: no-repeat;
